# librvl

./: CMakeLists.txt  LICENSE  README.md
.fossil-settings/: ignore-glob
cmake/: BuildExamples.cmake  ExternalProjects.cmake  FetchLZ4.cmake
cmake/fetch/: FetchLZ4.cmake  FetchLibLZMA.cmake  FetchLogC.cmake
examples/: CMakeLists.txt  example.c
include/: rvl.h
include/detail/: filesystem.h  rvl_compress_p.h  rvl_data_p.h  rvl_info_p.h  rvl_log_p.h  rvl_p.h  rvl_read_p.h  rvl_text_p.h  rvl_write_p.h
include/util/: filesystem.h  logger.h
src/: filesystem.c  rvl.c  rvl.h  rvl_common.c  rvl_compress.c  rvl_data.c  rvl_data.h  rvl_defs.h  rvl_get.c  rvl_info.c  rvl_info.h  rvl_log.c  rvl_read.c  rvl_set.c  rvl_text.c  rvl_text.h  rvl_write.c
src/detail/: rvl_read_p.c  rvl_write_p.c
src/util/: filesystem.c  logger.c
test/: CMakeLists.txt  rvl_tests.c  unit_tests.c
tests/: CMakeLists.txt  rvl_tests.c
tests/create_destroy/: CMakeLists.txt
tests/input_output/: CMakeLists.txt  input_output.c
tests/lz4/: CMakeLists.txt  lz4.c
tests/lzma2/: CMakeLists.txt  lzma2.c
tests/read_info/: CMakeLists.txt  read_info.c
tests/read_voxels/: CMakeLists.txt  read_voxels.c
tests/tiny_data/: CMakeLists.txt  tiny_data.c
